--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
       <h1>Memory Game</h1>
     </header>
 
-    <h2>Put your memory to the test with this super fun memory game!</h2>
-
     <nav>
       <a href="#instructions">Instructions</a>
       <a href="#game">Game</a>
@@ -29,12 +27,7 @@
           The object of the game is to turn over pairs of matching cards.</p>
       </div>
 
-      <div class="card-container" id="game">
-        <img src="images/back.png" alt="Queen of Diamonds">
-        <img src="images/back.png" alt="Queen of Hearts">
-        <img src="images/back.png" alt="King of Diamonds">
-        <img src="images/back.png" alt="King of Hearts">
-      </div>
+      <div id="game-board" class="board clearfix"></div>
 
       <div>
         <h6>Follow the developer!</h6>
@@ -47,7 +40,7 @@
       <p class="copyright">Copyright 2017</p>
       <p class="message">Created with &hearts; by <span class="name">GA</span></p>
     </footer>
-
+    
     <script src="js/main.js"></script>
 
   </body>
